<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	android:gravity="center_horizontal"
	android:background="@drawable/rounded_background">
	<View
		android:layout_width="75dp"
		android:layout_height="4dp"
		android:id="@+id/top_bar"
		android:background="@color/app_icon_disabled"
		android:layout_marginTop="12dp"
		android:clickable="true"
		android:focusable="true" />
	<ScrollView
		android:id="@+id/p_scroll"
		android:layout_width="match_parent"
		android:layout_height="match_parent">
		<LinearLayout
			android:id="@+id/parent"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:orientation="vertical">
			<LinearLayout
				android:id="@+id/sorts_layout"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:padding="4dp"
				android:orientation="vertical">
				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:gravity="start|center_vertical"
					android:orientation="horizontal"
					android:paddingStart="4dp"
					android:paddingEnd="4dp">
					<ImageView
						android:id="@+id/sort_img"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:src="@drawable/ic_sort"
						android:scaleType="fitCenter" />
					<TextView
						android:id="@+id/sort_by_txt"
						android:focusable="false"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:padding="8dp"
						android:text="@string/sort_by"
						android:textSize="16sp"
						android:textStyle="bold"
						android:textColor="@color/app_text_secondary"
						android:textAllCaps="true"/>
				</LinearLayout>
				<RadioGroup
					android:id="@+id/sort_types"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:paddingLeft="4dp"
					android:paddingRight="4dp"
					android:orientation="vertical">
					<RadioButton
						android:id="@+id/by_name"
						android:focusable="false"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:padding="8dp"
						android:text="@string/by_name"
						android:textSize="12sp"
						android:textColor="#212121"
						android:checked="true" />
					<RadioButton
						android:id="@+id/by_date_created"
						android:focusable="false"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:padding="8dp"
						android:text="@string/by_date_created"
						android:textSize="12sp"
						android:textColor="#212121" />
					<RadioButton
						android:id="@+id/by_use_count"
						android:focusable="false"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:padding="8dp"
						android:text="@string/by_use_count"
						android:textSize="12sp"
						android:textColor="#212121" />
				</RadioGroup>
				<LinearLayout
					android:id="@+id/div1"
					android:layout_width="match_parent"
					android:layout_height="2dp"
					android:background="#BDBDBD"
					android:orientation="horizontal" />
				<RadioGroup
					android:id="@+id/orders"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:paddingLeft="4dp"
					android:paddingRight="4dp"
					android:orientation="vertical">
					<RadioButton
						android:id="@+id/ascending"
						android:focusable="false"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:padding="8dp"
						android:text="@string/ascending"
						android:textSize="12sp"
						android:textColor="#212121"
						android:checked="true" />
					<RadioButton
						android:id="@+id/descending"
						android:focusable="false"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:padding="8dp"
						android:text="@string/descending"
						android:textSize="12sp"
						android:textColor="#212121" />
				</RadioGroup>
			</LinearLayout>
			<LinearLayout
				android:id="@+id/div2"
				android:layout_width="match_parent"
				android:layout_height="2dp"
				android:layout_marginLeft="4dp"
				android:layout_marginTop="4dp"
				android:layout_marginRight="4dp"
				android:background="#212121"
				android:orientation="horizontal" />
			<LinearLayout
				android:id="@+id/filters_layout"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:padding="4dp"
				android:orientation="vertical">
				<TextView
					android:id="@+id/show"
					android:focusable="false"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:padding="8dp"
					android:text="@string/show"
					android:textSize="14sp"
					android:textColor="#212121" />
				<RadioGroup
					android:id="@+id/filters"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:paddingLeft="4dp"
					android:paddingRight="4dp"
					android:orientation="vertical">
					<RadioButton
						android:id="@+id/all"
						android:focusable="false"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:padding="8dp"
						android:text="@string/all"
						android:textSize="12sp"
						android:textColor="#212121"
						android:checked="true" />
					<RadioButton
						android:id="@+id/favorites"
						android:focusable="false"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:padding="8dp"
						android:text="@string/favorites"
						android:textSize="12sp"
						android:textColor="#212121" />
				</RadioGroup>
			</LinearLayout>
		</LinearLayout>
	</ScrollView>
</LinearLayout>
