<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical">
	<ScrollView
		android:id="@+id/p_scroll"
		android:layout_width="match_parent"
		android:layout_height="match_parent">
		<LinearLayout
			android:id="@+id/parent"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:orientation="vertical"
			android:background="@drawable/rounded_background">
			<LinearLayout
				android:id="@+id/visual_lay"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:padding="4dp"
				android:orientation="vertical">
				<LinearLayout
					android:id="@+id/visual_bar"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:gravity="center_horizontal|center_vertical"
					android:orientation="horizontal">
					<TextView
						android:id="@+id/visual_txt"
						android:focusable="false"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:padding="8dp"
						android:text="@string/visual_settings"
						android:textSize="16sp"
						android:textColor="#212121" />
				</LinearLayout>
				<TextView
					android:id="@+id/grid_amount_txt"
					android:focusable="false"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginTop="4dp"
					android:padding="8dp"
					android:text="@string/grid_amount"
					android:textSize="14sp"
					android:textColor="#212121" />
				<SeekBar
					android:id="@+id/grid_amount_sbar"
					android:focusable="false"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:paddingLeft="16dp"
					android:paddingTop="8dp"
					android:paddingRight="16dp"
					android:paddingBottom="8dp"
					android:progress="2"
					android:max="5"
					android:min="1" />
				<LinearLayout
					android:id="@+id/div1"
					android:layout_width="match_parent"
					android:layout_height="2dp"
					android:background="#BDBDBD" />
				<TextView
					android:id="@+id/text_size_txt"
					android:focusable="false"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:padding="8dp"
					android:text="@string/text_size"
					android:textSize="14sp"
					android:textColor="#212121" />
				<SeekBar
					android:id="@+id/text_size_sbar"
					android:focusable="false"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:paddingLeft="16dp"
					android:paddingTop="8dp"
					android:paddingRight="16dp"
					android:paddingBottom="8dp"
					android:progress="3"
					android:max="5"
					android:min="1" />
			</LinearLayout>
			<LinearLayout
				android:id="@+id/div2"
				android:layout_width="match_parent"
				android:layout_height="2dp"
				android:layout_marginLeft="4dp"
				android:layout_marginRight="4dp"
				android:background="#212121" />
			<LinearLayout
				android:id="@+id/ux_lay"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:padding="4dp"
				android:orientation="vertical">
				<LinearLayout
					android:id="@+id/ux_bar"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:gravity="center_horizontal|center_vertical"
					android:orientation="horizontal">
					<TextView
						android:id="@+id/ux_txt"
						android:focusable="false"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:padding="8dp"
						android:text="@string/ux"
						android:textSize="16sp"
						android:textColor="#212121" />
				</LinearLayout>
				<TextView
					android:id="@+id/default_scan_txt"
					android:focusable="false"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginTop="4dp"
					android:paddingLeft="8dp"
					android:paddingTop="8dp"
					android:paddingRight="8dp"
					android:paddingBottom="4dp"
					android:text="@string/scan_mode"
					android:textSize="14sp"
					android:textColor="#212121" />
				<TextView
					android:id="@+id/scan_tip_txt"
					android:focusable="false"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:paddingLeft="8dp"
					android:paddingRight="8dp"
					android:paddingBottom="4dp"
					android:text="@string/scan_tip"
					android:textSize="12sp"
					android:textStyle="italic"
					android:textColor="#616161" />
				<LinearLayout
					android:id="@+id/mode_switch_lay"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:gravity="center_vertical"
					android:orientation="horizontal">
					<Switch
						android:id="@+id/mode_switch"
						android:focusable="false"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:paddingLeft="8dp"
						android:paddingTop="4dp"
						android:paddingBottom="8dp"
						android:text="@string/camera_scanner"
						android:textSize="14sp"
						android:textColor="#212121"
						android:switchPadding="4dp" />
					<TextView
						android:id="@+id/mode_switch_txt"
						android:focusable="false"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:paddingLeft="4dp"
						android:paddingTop="4dp"
						android:paddingRight="8dp"
						android:paddingBottom="8dp"
						android:text="@string/scan_from_image"
						android:textSize="14sp"
						android:textColor="#212121" />
				</LinearLayout>
				<LinearLayout
					android:id="@+id/div3"
					android:layout_width="match_parent"
					android:layout_height="2dp"
					android:background="#BDBDBD"
					android:orientation="horizontal" />
				<LinearLayout
					android:id="@+id/show_tutorial_lay"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:gravity="center_vertical">
					<TextView
						android:id="@+id/show_tutorial_txt"
						android:focusable="false"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:paddingLeft="4dp"
						android:paddingTop="4dp"
						android:paddingBottom="4dp"
						android:text="@string/show_tutorial"
						android:textSize="14sp"
						android:textColor="#212121"
						android:maxLines="2"
						app:layout_constraintStart_toStartOf="parent"
						app:layout_constraintEnd_toStartOf="@+id/show_tutorial_click"
						app:layout_constraintTop_toTopOf="parent"
						app:layout_constraintBottom_toBottomOf="parent" />
					<CheckBox
						android:id="@+id/show_tutorial"
						android:focusable="false"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:paddingTop="8dp"
						android:paddingRight="8dp"
						android:paddingBottom="8dp"
						android:gravity="left|center_vertical"
						android:textSize="12sp"
						android:textColor="#000000"
						android:layout_gravity="right|center_vertical" />
				</LinearLayout>
			</LinearLayout>
			<LinearLayout
				android:id="@+id/div4"
				android:layout_width="match_parent"
				android:layout_height="2dp"
				android:layout_marginLeft="4dp"
				android:layout_marginRight="4dp"
				android:background="#212121" />
			<LinearLayout
				android:id="@+id/data_lay"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:padding="4dp"
				android:orientation="vertical">
				<LinearLayout
					android:id="@+id/data_bar"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:gravity="center_horizontal|center_vertical"
					android:orientation="horizontal">
					<TextView
						android:id="@+id/data_txt"
						android:focusable="false"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:padding="8dp"
						android:text="@string/data_settings"
						android:textSize="16sp"
						android:textColor="#212121" />
				</LinearLayout>
				<LinearLayout
					android:id="@+id/data_buttons_bar"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:padding="4dp"
					android:gravity="center_vertical"
					android:orientation="horizontal"
					android:weightSum="100">
					<TextView
						android:id="@+id/import_btn"
						android:focusable="false"
						android:layout_width="0dp"
						android:layout_height="wrap_content"
						android:layout_margin="4dp"
						android:padding="8dp"
						android:gravity="center_horizontal"
						android:text="@string/import_data"
						android:textSize="14sp"
						android:textColor="#212121"
						android:layout_weight="50"
						android:elevation="2dp" />
					<TextView
						android:id="@+id/export_btn"
						android:focusable="false"
						android:layout_width="0dp"
						android:layout_height="wrap_content"
						android:layout_margin="4dp"
						android:padding="8dp"
						android:gravity="center_horizontal"
						android:text="@string/export_data"
						android:textSize="14sp"
						android:textColor="#212121"
						android:layout_weight="50"
						android:elevation="2dp" />
				</LinearLayout>
			</LinearLayout>
		</LinearLayout>
	</ScrollView>
</LinearLayout>
