<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical">
	<LinearLayout
		android:id="@+id/parent"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="vertical">
		<LinearLayout
			android:id="@+id/code_layout"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:padding="8dp"
			android:gravity="center_horizontal"
			android:orientation="vertical">
			<FrameLayout
				android:id="@+id/name_bar"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginBottom="16dp"
				android:gravity="center_horizontal|center_vertical"
				android:orientation="horizontal">
				<TextView
					android:id="@+id/card_name_txt"
					android:focusable="false"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:padding="8dp"
					android:gravity="center_horizontal"
					android:textSize="20sp"
					android:textStyle="bold"
					android:textColor="#212121"
					android:layout_gravity="center_horizontal|center_vertical"
					android:text="@string/card_name" />
				<ImageView
    android:id="@+id/fav_btn"
    android:layout_width="50dp"
    android:layout_height="50dp"
    android:clickable="true"
    android:focusable="true"
    android:padding="8dp"
    android:layout_gravity="right|center_vertical"
    android:src="@drawable/favorite_selector"
    android:background="@null"
    android:tint="@null"
    android:scaleType="fitXY"/>
			</FrameLayout>
			<LinearLayout
				android:id="@+id/img_parent"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:padding="2dp"
				android:gravity="center_horizontal"
				android:orientation="horizontal">
				<ImageView
					android:id="@+id/code_img"
					android:focusable="false"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:src="@drawable/default_image"
					android:scaleType="fitXY"
					android:adjustViewBounds="true" />
			</LinearLayout>
		</LinearLayout>
		<LinearLayout
			android:id="@+id/info_layout"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:padding="8dp"
			android:orientation="vertical">
			<TextView
				android:id="@+id/card_code_txt"
				android:focusable="false"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:padding="8dp"
				android:textSize="20sp"
				android:textColor="#212121"
				android:text="@string/card_code" />
			<TextView
				android:id="@+id/card_type_txt"
				android:focusable="false"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:padding="8dp"
				android:textSize="20sp"
				android:textColor="#212121"
				android:text="@string/card_type" />
		</LinearLayout>
	</LinearLayout>
</LinearLayout>
